# polis-calc

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: .dockerignore  Dockerfile  factories.py  main.py  utils.py
app/core/: config.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 3a08f734c81d_add_tables.py
app/db/models/: application_model.py  quote_model.py  user_model.py
app/endpoints/: dependencies.py  middlewares.py
app/endpoints/v1/: __init__.py  auth_routes.py  polis_routes.py  user_routes.py
app/repositories/: application_repository.py  quote_repository.py  user_repository.py
app/schemas/: auth_schema.py  polis_schema.py
app/services/: application_service.py  auth_service.py  quote_service.py  security_service.py
